commute ODM comparison

--- a/src/4-work-home-detection.ipynb
+++ b/src/4-work-home-detection.ipynb
@@ -44,11 +44,8 @@
    "source": [
     "# Load libs\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
     "import sqlalchemy\n",
     "from tqdm import tqdm\n",
-    "from datetime import datetime\n",
     "from lib import preprocess as preprocess"
    ],
    "metadata": {
@@ -270,6 +267,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "grps, bins = pd.qcut(range(0, 100), q=10, retbins=True)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 11,
    "outputs": [],
    "source": [
@@ -344,6 +356,18 @@
     "df_hw_w_eg.sort_values(by=['dist2work_wt'], ascending=False).to_csv('results/work_detection_examples.csv', index=False)\n",
     "df_examples.sort_values(by=['uid', 'cluster', 'half_hour']).to_csv('results/hw_detection_temporal_examples.csv', index=False)"
    ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
