update survey activity data

--- a/src/1-individuals-filters-DBSCAN.ipynb
+++ b/src/1-individuals-filters-DBSCAN.ipynb
@@ -40,18 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\numpy\\_distributor_init.py:32: UserWarning: loaded more than 1 DLL from .libs:\n",
-      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\numpy\\.libs\\libopenblas.NOIJJG62EMASZI6NYURL6JBKM4EVBGM7.gfortran-win_amd64.dll\n",
-      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\numpy\\.libs\\libopenblas.XWYDX2IKJW2NMTWSFYNGFUWKQU3LYTCZ.gfortran-win_amd64.dll\n",
-      "  stacklevel=1)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load libs\n",
     "import pandas as pd\n",
@@ -705,6 +694,45 @@
     "tqdm.pandas()\n",
     "df_selected.groupby('uid').progress_apply(lambda data: data.cluster.nunique()).median()"
    ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 5. Export data in CSV format"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [],
+   "source": [
+    "df2export = pd.read_sql_query(sql=\"\"\"SELECT * FROM stops_subset;\"\"\", con=engine)\n",
+    "df2export.to_csv('dbs/mad_stops_subset.csv.gz', compression='gzip', index=False)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
