--- a/src/6-commute-odm-comparison.ipynb
+++ b/src/6-commute-odm-comparison.ipynb
@@ -9,12 +9,12 @@
     }
    },
    "source": [
-    "# Commute ODMs comparison"
+    "# ODMs comparison"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "outputs": [
     {
      "name": "stdout",
@@ -38,17 +38,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "# Load libs\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
     "import sqlalchemy\n",
-    "from tqdm import tqdm\n",
-    "from datetime import datetime\n",
-    "from lib import preprocess as preprocess"
+    "from lib import preprocess as preprocess\n",
+    "from lib import helpers as helpers"
    ],
    "metadata": {
     "collapsed": false,
@@ -59,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "# Data location\n",
@@ -93,7 +90,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## 1. Municipality level"
+    "## 1. Survey ODMs: commute vs. overall"
    ],
    "metadata": {
     "collapsed": false,
@@ -104,10 +101,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "outputs": [],
    "source": [
-    "df_muni = df.loc[df.level == 'Municipality', :]"
+    "df_muni = pd.merge(pd.read_csv('dbs/survey/od_municipality.csv'),\n",
+    "                   pd.read_csv('dbs/survey/commute_od_municipality.csv'),\n",
+    "                   on=['ozone', 'dzone'], how='left').fillna(0)\n",
+    "df_deso = pd.merge(pd.read_csv('dbs/survey/od_deso.csv'),\n",
+    "                   pd.read_csv('dbs/survey/commute_od_deso.csv'),\n",
+    "                   on=['ozone', 'dzone'], how='left').fillna(0)"
    ],
    "metadata": {
     "collapsed": false,
@@ -118,9 +120,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "execution_count": 8,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0.8244804431049333"
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ssi_muni = helpers.odm_ssi(df_muni, x_field='sv', y_field='sv_commute')\n",
+    "ssi_muni"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0.3478671518206301"
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ssi_deso = helpers.odm_ssi(df_deso, x_field='sv', y_field='sv_commute')\n",
+    "ssi_deso"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
